// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useAppContext should call fetchAndUpdateCalendarEvents correctly 1`] = `
<div>
  <pre>
    {"activeDate":"2023-10-20T00:00:00.000Z","monthsToShow":["2023-09-20T00:00:00.000Z","2023-10-20T00:00:00.000Z","2023-11-20T01:00:00.000Z"],"openPopoverIndex":"","calendarEvents":{"1697760000000":[{"title":"Mock event","date":"2023-10-20T00:00:00.000Z","id":"uuid-1"},{"title":"Second mock event","date":"2023-10-20T00:00:00.000Z","id":"uuid-2"}]}}
  </pre>
</div>
`;

exports[`useAppContext should call goToNextMonth correctly 1`] = `
<div>
  <pre>
    {"activeDate":"2023-11-20T01:00:00.000Z","monthsToShow":["2023-10-20T00:00:00.000Z","2023-11-20T01:00:00.000Z","2023-12-20T01:00:00.000Z"],"openPopoverIndex":"","calendarEvents":{}}
  </pre>
</div>
`;

exports[`useAppContext should call goToPreviousMonth correctly 1`] = `
<div>
  <pre>
    {"activeDate":"2023-09-20T00:00:00.000Z","monthsToShow":["2023-08-20T00:00:00.000Z","2023-09-20T00:00:00.000Z","2023-10-20T00:00:00.000Z"],"openPopoverIndex":"","calendarEvents":{}}
  </pre>
</div>
`;

exports[`useAppContext should call jumpToDate correctly 1`] = `
<div>
  <pre>
    {"activeDate":"2024-06-29T00:00:00.000Z","monthsToShow":["2024-05-29T00:00:00.000Z","2024-06-29T00:00:00.000Z","2024-07-29T00:00:00.000Z"],"openPopoverIndex":"","calendarEvents":{}}
  </pre>
</div>
`;

exports[`useAppContext should call updateOpenPopoverIndex correctly 1`] = `
<div>
  <pre>
    {"activeDate":"2023-10-20T00:00:00.000Z","monthsToShow":["2023-09-20T00:00:00.000Z","2023-10-20T00:00:00.000Z","2023-11-20T01:00:00.000Z"],"openPopoverIndex":"TEST_INDEX","calendarEvents":{}}
  </pre>
</div>
`;

exports[`useAppContext should return state correctly 1`] = `
<div>
  <pre>
    {"activeDate":"2023-10-20T00:00:00.000Z","monthsToShow":["2023-09-20T00:00:00.000Z","2023-10-20T00:00:00.000Z","2023-11-20T01:00:00.000Z"],"openPopoverIndex":"","calendarEvents":{}}
  </pre>
</div>
`;
